Add "not_enabled" message for Strava integration in multiple languages
- Updated Spanish, French, Italian, Japanese, Korean, Dutch, Norwegian, Polish, Brazilian Portuguese, Russian, Swedish, and Chinese locale files to include a new message indicating that Strava integration is not enabled in the current instance.

--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -913,7 +913,8 @@
     "not_configured": "Strava لم يتم تكوينه",
     "ready_to_connect": "جاهز للاتصال",
     "strava_integration_desc": "اتصل بـ Strava لاستيراد التنشيطات الخاصة بك بسهولة إلى مواقع وزيارات",
-    "gpx_required": "يرجى تحميل ملف GPX لإكمال استيراد Strava"
+    "gpx_required": "يرجى تحميل ملف GPX لإكمال استيراد Strava",
+    "not_enabled": "لا يتم تمكين تكامل Strava في هذه الحالة."
   },
   "transportation": {
     "edit": "يحرر",
