--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -680,10 +680,17 @@
 		"backup_restore": "Backup & Restore",
 		"backup_restore_desc": "Save your data or restore it from a previous backup file.",
 		"whats_included": "What's included",
+		"whats_not_included": "What's not included",
         "import": "Import",
         "import_desc": "Import data from other sources.",
         "import_polarsteps": "Import Polarsteps Data",
         "import_polarsteps_desc": "Here you can import your data from Polarsteps. First, download a copy of your data by following the instructions <a href=\"https://support.polarsteps.com/hc/en-nl/articles/24266264821138-How-can-I-export-a-copy-of-my-data\" target=\"_blank\" rel=\"noopener noreferrer\"  class=\"text-primary hover:underline\">here</a>. Once you receive the file user_data.zip, upload it here to import your data.",
+        "import_polarsteps_collections": "Trips are imported as collections.",
+        "import_polarsteps_locations": "Steps are imported as locations. For each location one visit will be created.",
+        "import_polarsteps_photos": "Photos of steps are imported as images.",
+        "import_polarsteps_videos": "Videos of steps are imported as attachments.",
+        "import_polarsteps_travel_tracker": "Automatically created steps from the Travel Tracker, since they have no names and therefore do not align with the concept of AdventureLog.",
+        "import_polarsteps_planned_steps": "Planned steps in the future, since they're not included in the Polarsteps export.",
         "import_category": "Category (Choose category for imported locations, default is \"General\")",
         "keep_data_warning": "Keep Data Warning.",
         "keep_data_warning_desc": "Always create a backup of your data in the “Backup & Restore” section before importing data from another source. This allows you to roll back if the import fails. Additionally, keep an original copy of the data you plan to import.",
