RU translation: few lines updated

--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -285,8 +285,8 @@
     "loading_adventures": "Загрузка приключений ...",
     "name_location": "имя, локация",
     "collection_contents": "Содержание коллекции",
-    "check_in": "Регистрироваться",
-    "check_out": "Проверить",
+    "check_in": "Регистрация",
+    "check_out": "Выезд",
     "collection_link_location_error": "Ошибка связывания локации с коллекцией",
     "collection_link_location_success": "Локация успешно привязана к коллекции!",
     "collection_locations": "Добавить локации из коллекций",
@@ -455,7 +455,7 @@
     "wikipedia_error": "Не удалось получить описание из Википедии",
     "high": "Высокий",
     "low": "Низкий",
-    "rest": "Отдых",
+    "rest": "Осталось",
     "total": "Всего",
     "attachment_removed_error": "Ошибка удаления вложения",
     "attachment_removed_success": "Вложение успешно удалено",
