fix(i18n): update Chinese translations for location-related terms (#829)
Co-authored-by: Sean Morley <98704938+seanmorley15@users.noreply.github.com>

--- a/frontend/src/locales/zh.json
+++ b/frontend/src/locales/zh.json
@@ -14,15 +14,15 @@
     "shared_with_me": "与我分享",
     "theme_selection": "主题选择",
     "themes": {
-      "aestheticDark": "美学黑暗",
-      "aestheticLight": "美学之光",
-      "aqua": "水",
-      "dark": "黑暗的",
-      "dim": "暗淡",
+      "aestheticDark": "美学暗色",
+      "aestheticLight": "美学亮色",
+      "aqua": "水色",
+      "dark": "深色",
+      "dim": "昏暗",
       "forest": "森林",
-      "light": "光",
-      "night": "夜晚",
-      "northernLights": "北极光"
+      "light": "浅色",
+      "night": "夜色",
+      "northernLights": "极光"
     },
     "users": "用户",
     "worldtravel": "环球旅行",
@@ -38,7 +38,7 @@
     "about": "关于",
     "license": "根据 GPL-3.0 许可证授权。",
     "message": "在美国用 ❤️ 制作。",
-    "nominatim_1": "位置搜索和地理编码由",
+    "nominatim_1": "地点搜索和地理编码由",
     "nominatim_2": "提供。他们的数据根据ODbL许可证授权。",
     "oss_attributions": "开源声明",
     "other_attributions": "其他声明可以在 README 文件中找到。",
@@ -126,8 +126,8 @@
     "end_date": "结束日期",
     "start_date": "开始日期",
     "remove": "移除",
-    "location": "位置",
-    "search_for_location": "搜索位置",
+    "location": "地点",
+    "search_for_location": "搜索地点",
     "clear_map": "清除地图",
     "search_results": "搜索结果",
     "no_results": "未找到结果",
@@ -135,7 +135,7 @@
     "attachment": "附件",
     "images": "图片",
     "generate_desc": "生成描述",
-    "location_information": "位置信息",
+    "location_information": "地点信息",
     "link": "链接",
     "links": "链接",
     "description": "描述",
@@ -176,7 +176,7 @@
     "actions": "操作",
     "see_adventures": "查看冒险",
     "image_fetch_failed": "获取图片失败",
-    "no_location": "请输入位置",
+    "no_location": "请输入地点",
     "no_description_found": "未找到描述",
     "lodging": "住宿",
     "set_to_pin": "设置为图钉",
@@ -215,10 +215,10 @@
     "copy_failed": "复制失败",
     "show": "显示",
     "hide": "隐藏",
-    "clear_location": "清除位置",
+    "clear_location": "清除地点",
     "starting_airport": "起始机场",
     "ending_airport": "目的地机场",
-    "no_location_found": "未找到位置",
+    "no_location_found": "未找到地点",
     "from": "从",
     "to": "到",
     "start": "开始",
@@ -230,7 +230,7 @@
     "out_of_range": "不在行程日期范围内",
     "preview": "预览",
     "finding_recommendations": "发现你下一次冒险的隐藏宝藏",
-    "location_details": "位置详情",
+    "location_details": "地点详情",
     "city": "城市",
     "region": "地区",
     "md_instructions": "可以使用 Markdown 在此输入您的笔记。",
@@ -252,7 +252,7 @@
     "collection_no_start_end_date": "在集合页面中添加开始日期和结束日期将在“收集”页面中解锁行程计划功能。",
     "date_itinerary": "日期行程",
     "no_ordered_items": "将带有日期的项目添加到集合中，以便在此处查看它们。",
-    "ordered_itinerary": "订购了行程",
+    "ordered_itinerary": "已安排的行程",
     "invalid_date_range": "无效的日期范围",
     "timezone": "时区",
     "no_visits": "没有访问",
@@ -262,7 +262,7 @@
     "departure_date": "出发日期",
     "coordinates": "坐标",
     "copy_coordinates": "复制坐标",
-    "sun_times": "阳光时代",
+    "sun_times": "日照时间",
     "sunrise": "日出",
     "sunset": "日落",
     "timed": "时间",
@@ -283,40 +283,40 @@
     "delete_collection_warning": "您确定要删除此系列吗？\n该动作不能撤消。",
     "done": "完毕",
     "loading_adventures": "加载冒险...",
-    "name_location": "名称，位置",
+    "name_location": "名称，地点",
     "collection_contents": "收集内容",
     "check_in": "报到",
     "check_out": "查看",
-    "collection_link_location_error": "链接位置到集合的错误",
-    "collection_link_location_success": "成功链接到收集的位置！",
-    "collection_locations": "包括收集位置",
-    "collection_remove_location_error": "从集合中删除位置的错误",
-    "collection_remove_location_success": "成功从收藏中删除的位置！",
-    "create_location": "创建位置",
-    "delete_location": "删除位置",
-    "edit_location": "编辑位置",
-    "location_create_error": "无法创建位置",
-    "location_created": "创建的位置",
-    "location_delete_confirm": "您确定要删除此位置吗？\n该动作不能撤消。",
-    "location_delete_success": "位置成功删除了！",
-    "location_not_found": "找不到位置",
-    "location_not_found_desc": "找不到您寻找的位置。\n请尝试其他位置或稍后再检查。",
-    "location_update_error": "无法更新位置",
-    "location_updated": "位置更新",
-    "new_location": "新位置",
-    "no_collections_to_add_location": "没有发现将此位置添加到。",
-    "no_locations_to_recommendations": "找不到位置。\n添加至少一个位置以获取建议。",
-    "public_location": "公共位置",
-    "share_location": "分享这个位置！",
+    "collection_link_location_error": "链接地点到集合的错误",
+    "collection_link_location_success": "成功链接到收集的地点！",
+    "collection_locations": "包括收集地点",
+    "collection_remove_location_error": "从集合中删除地点的错误",
+    "collection_remove_location_success": "成功从收藏中删除的地点！",
+    "create_location": "创建地点",
+    "delete_location": "删除地点",
+    "edit_location": "编辑地点",
+    "location_create_error": "无法创建地点",
+    "location_created": "创建的地点",
+    "location_delete_confirm": "您确定要删除此地点吗？\n该动作不能撤消。",
+    "location_delete_success": "地点成功删除了！",
+    "location_not_found": "找不到地点",
+    "location_not_found_desc": "找不到您寻找的地点。\n请尝试其他地点或稍后再检查。",
+    "location_update_error": "无法更新地点",
+    "location_updated": "地点更新",
+    "new_location": "新地点",
+    "no_collections_to_add_location": "没有发现将此地点添加到。",
+    "no_locations_to_recommendations": "找不到地点。\n添加至少一个地点以获取建议。",
+    "public_location": "公共地点",
+    "share_location": "分享这个地点！",
     "visit_calendar": "访问日历",
-    "wiki_location_desc": "从Wikipedia文章中提取摘录，符合该位置的名称。",
-    "will_be_marked_location": "保存位置后，将被标记为访问。",
-    "no_locations_found": "找不到位置",
+    "wiki_location_desc": "从Wikipedia文章中提取摘录，符合该地点的名称。",
+    "will_be_marked_location": "保存地点后，将被标记为访问。",
+    "no_locations_found": "找不到地点",
     "image_modal_navigate": "使用箭头键或单击以导航",
-    "details": "细节",
+    "details": "详细信息",
     "leave": "离开",
     "leave_collection": "离开收藏",
-    "leave_collection_warning": "您确定要离开这个系列吗？\n您添加的任何位置都将被取消链接并保留在您的帐户中。",
+    "leave_collection_warning": "您确定要离开这个系列吗？\n您添加的任何地点都将被取消链接并保留在您的帐户中。",
     "left_collection_message": "成功离开收藏",
     "loading_collections": "加载收藏...",
     "quick_start": "快速开始",
@@ -330,12 +330,12 @@
     "activity_statistics": "活动统计",
     "activity_statistics_description": "您的健身和活动成就",
     "add_activity": "添加活动",
-    "add_first_trail": "使用上面的按钮添加您的第一个步道",
+    "add_first_trail": "使用上面的按钮添加您的第一个路径",
     "add_new_activity": "添加新活动",
-    "add_new_trail": "添加新步道",
-    "add_trail": "添加步道",
+    "add_new_trail": "添加新路径",
+    "add_trail": "添加路径",
     "add_visit": "添加访问",
-    "add_wanderer_trail": "添加流浪者步道",
+    "add_wanderer_trail": "添加wanderer轨迹",
     "attachment_management": "依恋管理",
     "attachment_name_required": "所需的附件名称",
     "attachment_remove_error": "删除附件时发生了错误",
@@ -347,15 +347,15 @@
     "back": "后退",
     "cadence": "节奏",
     "calories": "卡路里",
-    "click_map": "单击地图选择位置",
-    "click_on_map": "单击地图选择位置",
+    "click_map": "单击地图选择地点",
+    "click_on_map": "单击地图选择地点",
     "complete_import": "完全导入",
     "complete_strava_import": "完整的Strava导入",
     "confirm_delete_activity": "您确定要删除此活动吗？",
-    "connect_to_wanderer": "连接到流浪者",
+    "connect_to_wanderer": "连接到wanderer",
     "continue": "继续",
-    "create_new_location": "创建新位置",
-    "create_trail": "创建步道",
+    "create_new_location": "创建新地点",
+    "create_trail": "创建路径",
     "created": "创建",
     "current_attachments": "当前附件",
     "date_selection": "日期选择",
@@ -373,7 +373,7 @@
     "export_original": "出口原件",
     "external_link": "外部链接",
     "gain": "获得",
-    "getting_location_details": "获取位置详细信息",
+    "getting_location_details": "获取地点详细信息",
     "gpx_file": "GPX文件",
     "gpx_file_downloaded": "GPX文件下载。\n请在下面上传以完成导入。",
     "gpx_file_required": "需要GPX文件",
@@ -382,9 +382,9 @@
     "importing": "输入",
     "likes": "喜欢",
     "loading_activities": "加载活动",
-    "location_display_name": "位置显示名称",
+    "location_display_name": "地点显示名称",
     "location_map": "地点",
-    "location_selected": "选择的位置",
+    "location_selected": "选择的地点",
     "max_speed": "最大速度",
     "moving_time": "移动时间",
     "next_image": "下一个图像",
@@ -394,8 +394,8 @@
     "no_images_uploaded_yet": "尚无图像上传",
     "no_strava_activities": "这次访问期间找不到Strava活动",
     "no_trails_added": "还没有添加踪迹",
-    "no_trails_available": "没有可用的步道",
-    "no_trails_found_matching": "没有发现匹配的步道",
+    "no_trails_available": "没有可用的路径",
+    "no_trails_found_matching": "没有发现匹配的路径",
     "no_visits_description": "通过选择上面的日期来创建您的第一次访问",
     "notes_placeholder": "添加有关这次访问的笔记",
     "or": "或者",
@@ -403,16 +403,16 @@
     "photos": "照片",
     "previous_image": "上图",
     "processing": "加工",
-    "public_location_description": "使其他用户可见这个位置",
+    "public_location_description": "使其他用户可见这个地点",
     "remove_visit": "删除访问",
     "rest_time": "休息时间",
     "saved_activities": "保存的活动",
-    "search_location": "搜索位置",
-    "search_placeholder": "进入城市，位置或地标...",
-    "search_trails_placeholder": "搜索步道",
+    "search_location": "搜索地点",
+    "search_placeholder": "进入城市，地点或地标...",
+    "search_trails_placeholder": "搜索路径",
     "searching": "搜索",
     "select_on_map": "在地图上选择",
-    "select_wanderer_trail": "从您的流浪者帐户中选择一条小径",
+    "select_wanderer_trail": "从您的流wanderer帐户中选择一条路径",
     "sport_type": "运动类型",
     "sport_type_placeholder": "越野跑",
     "start_lat": "开始纬度",
@@ -423,20 +423,20 @@
     "total_covered": "总覆盖",
     "total_recorded": "记录总数",
     "trail": "踪迹",
-    "trail_created_successfully": "步道成功创建了",
+    "trail_created_successfully": "路径成功创建",
     "trail_creation_failed": "未能创建足迹",
-    "trail_fetch_failed": "未能获取流浪者的踪迹",
-    "trail_link_required": "需要一个路线链接",
-    "trail_name": "步道名称",
-    "trail_removal_failed": "无法删除踪迹",
-    "trail_removed_successfully": "步道成功地删除了",
-    "trail_update_failed": "无法更新跟踪",
-    "trail_updated_successfully": "TRAIL成功更新了",
-    "trails": "步道",
-    "trails_found_for": "找到的步道",
+    "trail_fetch_failed": "未能获取wanderer的路径",
+    "trail_link_required": "需要一个路径链接",
+    "trail_name": "路径名称",
+    "trail_removal_failed": "无法删除路径",
+    "trail_removed_successfully": "路径成功删除",
+    "trail_update_failed": "无法更新总",
+    "trail_updated_successfully": "路径更新成功",
+    "trails": "路径",
+    "trails_found_for": "找到的路径",
     "trails_management": "跟踪管理",
-    "trails_management_description": "管理与此位置相关的步道。\n步道可以链接到外部服务，例如Alltrails或链接到Wanderer Trails。",
-    "update_location_details": "更新位置详细信息",
+    "trails_management_description": "管理与此地点相关的路径。\n路径可以链接到外部服务，例如Alltrails或链接到Wanderer Trails。",
+    "update_location_details": "更新地点详细信息",
     "update_visit": "更新访问",
     "upload_activity": "上传活动",
     "upload_attachment": "上传附件",
@@ -446,11 +446,11 @@
     "upload_from_url": "从URL上传",
     "upload_gpx_file": "上传刚刚下载以完成Strava导入的GPX文件",
     "uploading": "上传",
-    "use_current_location": "使用当前位置",
+    "use_current_location": "使用当前地点",
     "view_gpx": "查看GPX",
     "view_on": "查看",
     "view_strava_activities": "查看Strava活动",
-    "view_trail": "查看步道",
+    "view_trail": "查看路径",
     "wanderer_integration_error": "流浪者集成未启用或已过期。",
     "wikipedia_error": "无法从Wikipedia产生描述",
     "high": "高的",
@@ -461,7 +461,7 @@
     "attachment_removed_success": "固定被吸收去除",
     "attachments_upload_info": "保存后，附件将上传",
     "image_upload_info": "保存后将上传图像",
-    "linked_locations": "链接的位置",
+    "linked_locations": "链接的地点",
     "lodging_save_error": "保存错误的住宿",
     "my_attachments": "我的附件",
     "no_attachments": "没有附件",
@@ -491,7 +491,7 @@
     "email": "电子邮件",
     "first_name": "名",
     "last_name": "姓",
-    "registration_disabled": "注册当前已禁用。",
+    "registration_disabled": "当前暂不开放注册。",
     "profile_picture": "头像",
     "public_profile": "公开资料",
     "public_tooltip": "通过公开个人资料，用户可以与您共享合集，并在用户页面查看您的资料。",
@@ -499,12 +499,12 @@
     "or_3rd_party": "或使用第三方服务登录",
     "no_public_collections": "未找到公开合集",
     "user_collections": "用户合集",
-    "no_public_locations": "找不到公共场所",
-    "user_locations": "用户位置",
+    "no_public_locations": "未公开冒险",
+    "user_locations": "用户地点",
     "enter_password": "输入您的密码",
     "enter_username": "输入您的用户名",
     "logging_in": "登录",
-    "totp": "两因素代码"
+    "totp": "二步验证代码"
   },
   "worldtravel": {
     "all": "全部",
@@ -556,15 +556,15 @@
     "show_map_labels": "显示地图标签",
     "total_cities": "总城市",
     "total_countries": "总国家",
-    "newest_first": "最新的第一",
-    "oldest_first": "最古老的第一",
-    "unvisited_first": "首先未访问",
-    "visited_first": "首先访问",
+    "newest_first": "最新优先",
+    "oldest_first": "最早优先",
+    "unvisited_first": "未访问优先",
+    "visited_first": "已访问优先",
     "total_items": "总项目",
-    "getting_location_details": "获取位置详细信息"
+    "getting_location_details": "获取地点详细信息"
   },
   "users": {
-    "no_users_found": "未找到已公开个人资料的用户。"
+    "no_users_found": "未找到已公开的用户。"
   },
   "settings": {
     "account_settings": "用户账户设置",
@@ -697,9 +697,9 @@
     "verify_setup": "验证设置",
     "whats_included": "包括什么",
     "backup_your_data": "备份您的数据",
-    "backup_your_data_desc": "下载您的帐户数据的完整备份，包括位置，集合，媒体和访问。",
+    "backup_your_data_desc": "下载您的帐户数据的完整备份，包括地点，集合，媒体和访问。",
     "data_override_acknowledge": "我承认这将覆盖我所有现有数据",
-    "data_override_acknowledge_desc": "此操作是不可逆转的，将取代您帐户中的所有位置，收集和访问。",
+    "data_override_acknowledge_desc": "此操作是不可逆转的，将取代您帐户中的所有地点，收集和访问。",
     "data_override_warning": "数据覆盖警告",
     "data_override_warning_desc": "还原数据将完全替换帐户中的所有现有数据（备份中包含在备份中）。\n该动作不能撤消。",
     "integrations_settings": "集成设置",
@@ -709,9 +709,9 @@
     "select_backup_file": "选择备份文件",
     "world_travel_visits": "世界旅行访问",
     "activities": "活动",
-    "trails": "步道",
-    "use_imperial": "使用帝国单位",
-    "use_imperial_desc": "使用帝国单位（英尺，英寸，磅）代替度量单位"
+    "trails": "路径",
+    "use_imperial": "使用英制单位",
+    "use_imperial_desc": "使用英制单位（英尺、英寸、磅）代替公制单位"
   },
   "checklist": {
     "checklist_delete_error": "删除清单时出错",
@@ -794,14 +794,14 @@
     "transportation_deleted": "交通信息删除成功！",
     "type": "类型",
     "ending_airport_desc": "输入到达机场代码（如：LAX）",
-    "fetch_location_information": "获取位置信息",
+    "fetch_location_information": "获取地点信息",
     "starting_airport_desc": "输入出发机场代码（如：JFK）",
-    "create_new_transportation": "新运输",
+    "create_new_transportation": "新建交通信息",
     "enter_flight_number": "输入航班号",
-    "enter_from_location": "从位置输入",
+    "enter_from_location": "从地点输入",
     "enter_link": "输入链接",
-    "enter_to_location": "输入位置",
-    "enter_transportation_name": "输入运输名称",
+    "enter_to_location": "输入地点",
+    "enter_transportation_name": "输入交通名称",
     "select_type": "选择类型",
     "update_transportation_details": "更新运输详细信息"
   },
@@ -830,21 +830,21 @@
     "map_controls": "地图控件",
     "marker_placed_on_map": "放置在地图上的标记",
     "regions": "地区",
-    "add_location": "添加新位置",
-    "add_location_at_marker": "在标记处添加新位置",
-    "location_map": "位置图",
-    "locations_shown": "显示的位置",
+    "add_location": "添加新地点",
+    "add_location_at_marker": "在标记处添加新地点",
+    "location_map": "地点图",
+    "locations_shown": "显示的地点",
     "place_marker_desc_location": "单击地图以放置标记。",
     "show_activities": "展示活动",
     "show_visited_cities": "参观城市"
   },
   "languages": {},
   "share": {
-    "no_users_shared": "没有与之共享的用户",
+    "no_users_shared": "没有已共享的用户",
     "not_shared_with": "不与共享",
     "share_desc": "与其他用户分享此合集。",
     "shared": "共享",
-    "shared_with": "共享对象",
+    "shared_with": "已共享的用户",
     "unshared": "未共享",
     "with": "和",
     "go_to_settings": "前往设置",
@@ -853,7 +853,9 @@
     "available": "可用的",
     "pending": "待办的",
     "revoke_invite": "撤销邀请",
-    "send_invite": "发送邀请"
+    "send_invite": "发送邀请",
+    "available_users": "可邀请的用户",
+    "no_available_users": "没有可邀请的用户"
   },
   "profile": {
     "member_since": "会员自",
@@ -863,12 +865,12 @@
     "visited_cities": "访问过的城市",
     "discovered": "发现",
     "explored": "探索",
-    "no_shared_adventures": "该用户尚未分享任何公共冒险。",
-    "no_shared_collections": "该用户尚未共享任何公共收藏。",
+    "no_shared_adventures": "该用户尚未公开任何冒险。",
+    "no_shared_collections": "该用户尚未公开任何收藏。",
     "planned_trips": "计划的旅行",
     "travel_statistics": "旅行统计",
     "your_journey_at_a_glance": "您一眼的冒险之旅",
-    "public_location_experiences": "公共位置经验"
+    "public_location_experiences": "公共地点经验"
   },
   "categories": {
     "category_name": "类别名称",
@@ -879,7 +881,7 @@
     "select_category": "选择类别",
     "add_new_category": "添加新类别",
     "name_required": "需要类别名称",
-    "location_update_after_refresh": "刷新页面后，将更新位置卡。"
+    "location_update_after_refresh": "刷新页面后，将更新地点卡。"
   },
   "dashboard": {
     "add_some": "为什么不开始计划你的下一次冒险呢？\n您可以通过单击下面的按钮添加新的冒险。",
@@ -939,7 +941,7 @@
     "recommendations": "建议",
     "food": "食物",
     "tourism": "旅游",
-    "location_recommendations": "位置建议"
+    "location_recommendations": "地点建议"
   },
   "lodging": {
     "campground": "露营地",
@@ -964,7 +966,7 @@
     "update_lodging_details": "更新住宿详细信息"
   },
   "google_maps": {
-    "google_maps_integration_desc": "连接您的Google Maps帐户以获取高质量的位置搜索结果和建议。",
+    "google_maps_integration_desc": "连接您的Google Maps帐户以获取高质量的地点搜索结果和建议。",
     "google_maps_integration_desc_no_staff": "该集成必须首先由该服务器上的管理员启用。"
   },
   "calendar": {
@@ -976,12 +978,12 @@
     "month": "月",
     "today": "今天",
     "total_events": "总事件",
-    "week": "星期"
+    "week": "周"
   },
   "locations": {
     "location": "地点",
-    "locations": "位置",
-    "my_locations": "我的位置"
+    "locations": "地点",
+    "my_locations": "我的地点"
   },
   "settings_download_backup": "下载备份",
   "invites": {
@@ -1008,13 +1010,13 @@
     "disconnected": "成功与Strava断开连接",
     "not_configured": "Strava未配置",
     "ready_to_connect": "准备连接",
-    "strava_integration_desc": "连接到Strava，轻松将您的活动导入到位置和访问中",
+    "strava_integration_desc": "连接到Strava，轻松将您的活动导入到地点和访问中",
     "gpx_required": "请上传GPX文件以完成Strava导入",
-    "not_enabled": "在这种情况下未启用Strava集成。"
+    "not_enabled": "未启用Strava集成。"
   },
   "wanderer": {
-    "connected": "成功与流浪者联系",
-    "connection_error": "与流浪者连接的错误",
-    "wanderer_integration_desc": "连接到流浪者轻松导入并在位置查看您的步道"
+    "connected": "已成功连接 Wanderer",
+    "connection_error": "连接 Wanderer 时出错",
+    "wanderer_integration_desc": "连接 Wanderer，可便捷导入轨迹并在地点页面查看"
   }
 }
