Timezone fixes, Translations, and Misc Fixes (#844)
* Translated using Weblate (Spanish)

Currently translated at 100.0% (956 of 956 strings)

Translation: AdventureLog/Web App
Translate-URL: https://hosted.weblate.org/projects/adventurelog/web-app/es/

* Added translation using Weblate (English (United States))

* Translated using Weblate (Norwegian Bokmål)

Currently translated at 100.0% (956 of 956 strings)

Translation: AdventureLog/Web App
Translate-URL: https://hosted.weblate.org/projects/adventurelog/web-app/nb_NO/

* Remove empty English (United States) locale file

* Translated using Weblate (Spanish)

Currently translated at 100.0% (956 of 956 strings)

Translation: AdventureLog/Web App
Translate-URL: https://hosted.weblate.org/projects/adventurelog/web-app/es/

* [BUG]Ordered Itinerary includes visits that are outside itinerary date range
Fixes #746

* [BUG] Server Error (500) when trying to access the API docs
Fixes #712

* [BUG] Single day Collections will think location visits are out of date range
Fixes #827

* Fixes #654

* Translated using Weblate (Spanish)

Currently translated at 100.0% (956 of 956 strings)

Translation: AdventureLog/Web App
Translate-URL: https://hosted.weblate.org/projects/adventurelog/web-app/es/

* Added Slovak translations (#815)

* Created sk.json

* Update Navbar.svelte

* Update +layout.svelte

---------

Co-authored-by: Sean Morley <98704938+seanmorley15@users.noreply.github.com>

* Implement code changes to enhance functionality and improve performance

* Translated using Weblate (Slovak)

Currently translated at 100.0% (958 of 958 strings)

Translation: AdventureLog/Web App
Translate-URL: https://hosted.weblate.org/projects/adventurelog/web-app/sk/

* Translated using Weblate (German)

Currently translated at 100.0% (958 of 958 strings)

Translation: AdventureLog/Web App
Translate-URL: https://hosted.weblate.org/projects/adventurelog/web-app/de/

* [BUG] Location Visit End Date not affected by Location Timezone
Fixes #8

--- a/frontend/src/locales/sk.json
+++ b/frontend/src/locales/sk.json
@@ -475,7 +475,9 @@
 		"total_distance": "Celková vzdialenosť",
 		"total_activities": "Celkový počet aktivít",
 		"recorded_sessions": "Zaznamenané relácie",
-		"activity_breakdown_by_category": "Rozpis aktivít podľa kategórie"
+		"activity_breakdown_by_category": "Rozpis aktivít podľa kategórie",
+		"dates_not_saved": "Návšteva ešte nepridaná",
+		"dates_not_saved_description": "Klikni na Pridať navštevu pre uloženie"
 	},
 	"worldtravel": {
 		"country_list": "Zoznam krajín",
